[gd_scene load_steps=42 format=2]

[ext_resource path="res://Graphics/Fonts/pixel_2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Objects/ProvinceEditor/Province.gd" type="Script" id=2]
[ext_resource path="res://Objects/ProvinceEditor/ButtonProvince.gd" type="Script" id=3]
[ext_resource path="res://Graphics/Sprites/Goods/Coal.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Sprites/Goods/Oil.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Sprites/Goods/Cotton.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Sprites/Goods/Cattle.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Sprites/Goods/Tabaco.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Sprites/Goods/kREST.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Sprites/Goods/Iron.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Sprites/Goods/Seed.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Sprites/Goods/Nitrate.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Sprites/Goods/Wood.png" type="Texture" id=13]
[ext_resource path="res://Graphics/Sprites/Goods/Phone.png" type="Texture" id=14]
[ext_resource path="res://Graphics/Sprites/Goods/Car.png" type="Texture" id=15]
[ext_resource path="res://Graphics/Sprites/Goods/Tea.png" type="Texture" id=16]
[ext_resource path="res://Objects/ProvinceEditor/ResourceButton.gd" type="Script" id=17]
[ext_resource path="res://Objects/ProvinceEditor/Resource/EraseResourceButton.gd" type="Script" id=18]
[ext_resource path="res://Graphics/Sprites/Goods/Steel.png" type="Texture" id=19]
[ext_resource path="res://Graphics/Sprites/Goods/Electric parts.png" type="Texture" id=20]
[ext_resource path="res://Graphics/Sprites/Goods/Fabric.png" type="Texture" id=21]
[ext_resource path="res://Graphics/Sprites/Goods/Alhohol.png" type="Texture" id=22]
[ext_resource path="res://Graphics/Sprites/Goods/Glass.png" type="Texture" id=23]
[ext_resource path="res://Objects/ProvinceEditor/Factories/AppendFactoryButton.gd" type="Script" id=24]
[ext_resource path="res://Objects/ProvinceEditor/Factories/EraseFactoryButton.gd" type="Script" id=25]
[ext_resource path="res://Objects/ProvinceEditor/Population/PopulationPanel.gd" type="Script" id=26]
[ext_resource path="res://Objects/ProvinceEditor/LandscapeButton.gd" type="Script" id=27]
[ext_resource path="res://Graphics/Sprites/Goods/Rubber.png" type="Texture" id=28]
[ext_resource path="res://Graphics/Sprites/Goods/Canned food.png" type="Texture" id=29]
[ext_resource path="res://Graphics/Sprites/Goods/Telegraph.png" type="Texture" id=30]
[ext_resource path="res://Graphics/Sprites/Goods/Clothes.png" type="Texture" id=31]
[ext_resource path="res://Graphics/Sprites/Goods/Gas.png" type="Texture" id=32]
[ext_resource path="res://Graphics/Sprites/Goods/Furniture.png" type="Texture" id=33]
[ext_resource path="res://Graphics/Sprites/Goods/Radio.png" type="Texture" id=34]
[ext_resource path="res://Objects/ProvinceEditor/Resource/ListOfResources.gd" type="Script" id=35]
[ext_resource path="res://Objects/ProvinceEditor/Resource/ListOfResourcesInRegion.gd" type="Script" id=36]
[ext_resource path="res://Objects/ProvinceEditor/Factories/ListOfFactoriesInRegion.gd" type="Script" id=37]
[ext_resource path="res://Objects/ProvinceEditor/Factories/ListOfFactoryGoods.gd" type="Script" id=38]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
extra_spacing_top = -9
extra_spacing_bottom = -3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Province" type="Panel"]
margin_top = 707.0
margin_right = 275.0
margin_bottom = 1080.0
script = ExtResource( 2 )

[node name="Buttons" type="VBoxContainer" parent="."]
margin_right = 458.0
margin_bottom = 108.0
rect_scale = Vector2( 0.6, 0.6 )
custom_constants/separation = 0

[node name="Label" type="Label" parent="Buttons"]
margin_right = 458.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="Button" type="Button" parent="Buttons"]
margin_top = 32.0
margin_right = 458.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "Set path"

[node name="Button2" type="Button" parent="Buttons"]
margin_top = 70.0
margin_right = 458.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
text = "Степь"
script = ExtResource( 27 )

[node name="Paths" type="VBoxContainer" parent="."]
margin_top = 65.0
margin_right = 393.0
margin_bottom = 505.0
rect_scale = Vector2( 0.7, 0.7 )

[node name="PathButton" type="Button" parent="Paths"]
margin_right = 393.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
text = "Провинция"
script = ExtResource( 3 )

[node name="ResourcesInRegion" type="HBoxContainer" parent="."]
margin_top = -52.0
margin_right = 560.0
margin_bottom = 54.0
rect_scale = Vector2( 0.49, 0.49 )
custom_constants/separation = 0
script = ExtResource( 36 )

[node name="Button" type="Button" parent="ResourcesInRegion"]
margin_right = 112.0
margin_bottom = 106.0
icon = ExtResource( 9 )
script = ExtResource( 18 )

[node name="Button2" type="Button" parent="ResourcesInRegion"]
margin_left = 112.0
margin_right = 224.0
margin_bottom = 106.0
icon = ExtResource( 9 )
script = ExtResource( 18 )

[node name="Button3" type="Button" parent="ResourcesInRegion"]
margin_left = 224.0
margin_right = 336.0
margin_bottom = 106.0
icon = ExtResource( 9 )
script = ExtResource( 18 )

[node name="Button4" type="Button" parent="ResourcesInRegion"]
margin_left = 336.0
margin_right = 448.0
margin_bottom = 106.0
icon = ExtResource( 9 )
script = ExtResource( 18 )

[node name="Button5" type="Button" parent="ResourcesInRegion"]
margin_left = 448.0
margin_right = 560.0
margin_bottom = 106.0
icon = ExtResource( 9 )
script = ExtResource( 18 )

[node name="FactoriesInRegion" type="HBoxContainer" parent="."]
margin_top = -104.0
margin_right = 560.0
margin_bottom = 2.0
rect_scale = Vector2( 0.49, 0.49 )
custom_constants/separation = 0
script = ExtResource( 37 )

[node name="FactoryButton" type="Button" parent="FactoriesInRegion"]
margin_right = 112.0
margin_bottom = 106.0
icon = ExtResource( 9 )
script = ExtResource( 25 )

[node name="FactoryButton2" type="Button" parent="FactoriesInRegion"]
margin_left = 112.0
margin_right = 224.0
margin_bottom = 106.0
icon = ExtResource( 9 )
script = ExtResource( 25 )

[node name="FactoryButton3" type="Button" parent="FactoriesInRegion"]
margin_left = 224.0
margin_right = 336.0
margin_bottom = 106.0
icon = ExtResource( 9 )
script = ExtResource( 25 )

[node name="FactoryButton4" type="Button" parent="FactoriesInRegion"]
margin_left = 336.0
margin_right = 448.0
margin_bottom = 106.0
icon = ExtResource( 9 )
script = ExtResource( 25 )

[node name="FactoryButton5" type="Button" parent="FactoriesInRegion"]
margin_left = 448.0
margin_right = 560.0
margin_bottom = 106.0
icon = ExtResource( 9 )
script = ExtResource( 25 )

[node name="Households" type="Panel" parent="."]
margin_top = -705.0
margin_right = 362.0
margin_bottom = -332.0
script = ExtResource( 26 )

[node name="Button" type="Button" parent="Households"]
margin_right = 362.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "Append household"

[node name="VBoxContainer" type="VBoxContainer" parent="Households"]
margin_top = 38.0
margin_right = 361.0
margin_bottom = 373.0

[node name="ListOfFactoryGoods" type="HBoxContainer" parent="."]
margin_left = 275.0
margin_top = 266.0
margin_right = 1843.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
script = ExtResource( 38 )

[node name="Factory_good" type="Button" parent="ListOfFactoryGoods"]
margin_right = 112.0
margin_bottom = 106.0
icon = ExtResource( 19 )
script = ExtResource( 24 )
good = "steel"

[node name="Factory_good2" type="Button" parent="ListOfFactoryGoods"]
margin_left = 112.0
margin_right = 224.0
margin_bottom = 106.0
icon = ExtResource( 23 )
script = ExtResource( 24 )
good = "glass"

[node name="Factory_good3" type="Button" parent="ListOfFactoryGoods"]
margin_left = 224.0
margin_right = 336.0
margin_bottom = 106.0
icon = ExtResource( 21 )
script = ExtResource( 24 )
good = "textile"

[node name="Factory_good4" type="Button" parent="ListOfFactoryGoods"]
margin_left = 336.0
margin_right = 448.0
margin_bottom = 106.0
icon = ExtResource( 20 )
script = ExtResource( 24 )
good = "el_parts"

[node name="Factory_good6" type="Button" parent="ListOfFactoryGoods"]
margin_left = 448.0
margin_right = 560.0
margin_bottom = 106.0
icon = ExtResource( 13 )
script = ExtResource( 24 )
good = "lumber"

[node name="Factory_good7" type="Button" parent="ListOfFactoryGoods"]
margin_left = 560.0
margin_right = 672.0
margin_bottom = 106.0
icon = ExtResource( 15 )
script = ExtResource( 24 )
good = "cars"

[node name="Factory_good9" type="Button" parent="ListOfFactoryGoods"]
margin_left = 672.0
margin_right = 784.0
margin_bottom = 106.0
icon = ExtResource( 30 )
script = ExtResource( 24 )
good = "telegraphs"

[node name="Factory_good11" type="Button" parent="ListOfFactoryGoods"]
margin_left = 784.0
margin_right = 896.0
margin_bottom = 106.0
icon = ExtResource( 14 )
script = ExtResource( 24 )
good = "phone"

[node name="Factory_good12" type="Button" parent="ListOfFactoryGoods"]
margin_left = 896.0
margin_right = 1008.0
margin_bottom = 106.0
icon = ExtResource( 34 )
script = ExtResource( 24 )
good = "radio"

[node name="Factory_good13" type="Button" parent="ListOfFactoryGoods"]
margin_left = 1008.0
margin_right = 1120.0
margin_bottom = 106.0
icon = ExtResource( 33 )
script = ExtResource( 24 )
good = "furniture"

[node name="Factory_good14" type="Button" parent="ListOfFactoryGoods"]
margin_left = 1120.0
margin_right = 1232.0
margin_bottom = 106.0
icon = ExtResource( 22 )
script = ExtResource( 24 )
good = "alcohol"

[node name="Factory_good15" type="Button" parent="ListOfFactoryGoods"]
margin_left = 1232.0
margin_right = 1344.0
margin_bottom = 106.0
icon = ExtResource( 31 )
script = ExtResource( 24 )
good = "clothes"

[node name="Factory_good16" type="Button" parent="ListOfFactoryGoods"]
margin_left = 1344.0
margin_right = 1456.0
margin_bottom = 106.0
icon = ExtResource( 29 )
script = ExtResource( 24 )
good = "canned_food"

[node name="Factory_good17" type="Button" parent="ListOfFactoryGoods"]
margin_left = 1456.0
margin_right = 1568.0
margin_bottom = 106.0
icon = ExtResource( 32 )
script = ExtResource( 24 )
good = "gas"

[node name="ListOfResources" type="HBoxContainer" parent="."]
margin_left = 274.0
margin_top = 151.0
margin_right = 1954.0
margin_bottom = 267.0
rect_scale = Vector2( 0.98, 0.98 )
custom_constants/separation = 0
script = ExtResource( 35 )

[node name="Resource_good" type="Button" parent="ListOfResources"]
margin_right = 112.0
margin_bottom = 116.0
icon = ExtResource( 4 )
script = ExtResource( 17 )
good = "coal"

[node name="Resource_good2" type="Button" parent="ListOfResources"]
margin_left = 112.0
margin_right = 224.0
margin_bottom = 116.0
icon = ExtResource( 10 )
script = ExtResource( 17 )
good = "iron"

[node name="Resource_good3" type="Button" parent="ListOfResources"]
margin_left = 224.0
margin_right = 336.0
margin_bottom = 116.0
icon = ExtResource( 6 )
script = ExtResource( 17 )
good = "cotton"

[node name="Resource_good4" type="Button" parent="ListOfResources"]
margin_left = 336.0
margin_right = 448.0
margin_bottom = 116.0
icon = ExtResource( 5 )
script = ExtResource( 17 )
good = "oil"

[node name="Resource_good5" type="Button" parent="ListOfResources"]
margin_left = 448.0
margin_right = 560.0
margin_bottom = 116.0
icon = ExtResource( 28 )
script = ExtResource( 17 )
good = "rubber"

[node name="Resource_good6" type="Button" parent="ListOfResources"]
margin_left = 560.0
margin_right = 672.0
margin_bottom = 116.0
icon = ExtResource( 13 )
script = ExtResource( 17 )
good = "wood"

[node name="Resource_good7" type="Button" parent="ListOfResources"]
margin_left = 672.0
margin_right = 784.0
margin_bottom = 116.0
icon = ExtResource( 12 )
script = ExtResource( 17 )
good = "saltpeter"

[node name="Resource_good8" type="Button" parent="ListOfResources"]
margin_left = 784.0
margin_right = 896.0
margin_bottom = 116.0
icon = ExtResource( 7 )
script = ExtResource( 17 )
good = "beasts"

[node name="Resource_good9" type="Button" parent="ListOfResources"]
margin_left = 896.0
margin_right = 1008.0
margin_bottom = 116.0
icon = ExtResource( 11 )
script = ExtResource( 17 )
good = "grain"

[node name="Resource_good10" type="Button" parent="ListOfResources"]
margin_left = 1008.0
margin_right = 1120.0
margin_bottom = 116.0
icon = ExtResource( 8 )
script = ExtResource( 17 )
good = "tabaco"

[node name="Resource_good11" type="Button" parent="ListOfResources"]
margin_left = 1120.0
margin_right = 1232.0
margin_bottom = 116.0
icon = ExtResource( 16 )
script = ExtResource( 17 )
good = "tea"

[connection signal="pressed" from="Buttons/Button" to="." method="start_setting_path"]
[connection signal="pressed" from="Households/Button" to="Households" method="append_household"]
